Fix spacing in certifications

--- a/website/style.css
+++ b/website/style.css
@@ -148,7 +148,7 @@ section:last-child {
 
 .keySkills {
 	list-style-type: none;
-	-moz-column-count:3;
+	-moz-column-count:2;
 	-webkit-column-count:3;
 	column-count:3;
 	margin-bottom: 20px;
